bpo-31285: Fix an assertion failure and a SystemError in warnings.warn_explicit. (#3219)